added db migration for users

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <a href="/login">Login</a>
+    </nav>
+  </header>
   <h1>Hello Todos</h1>
 </body>
 </html>
