--- a/pages/login.html
+++ b/pages/login.html
@@ -6,6 +6,11 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <a href="/">Home</a>
+    </nav>
+  </header>
   <form action="/api/login" method="post">
     <label for="login-email">Email</label>
     <input type="email" name="login-email" id="login-email">
