--- a/index.html
+++ b/index.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="/login">Login</a>
-    </nav>
-  </header>
-  <h1>Hello Todos</h1>
-</body>
-</html>
+{{define "content"}}
+<h1>Hello Todos</h1>
+<button hx-get="/api/clicked" hx-swap="outerHTML">HTMX test button</button>
+{{end}}
