--- a/pages/login.html
+++ b/pages/login.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <a href="/">Home</a>
-    </nav>
-  </header>
-  <form action="/api/login" method="post">
-    <label for="login-email">Email</label>
-    <input type="email" name="login-email" id="login-email">
+{{define "content"}}
+<form action="/api/login" method="post">
+  <label for="login-email">Email</label>
+  <input type="email" name="login-email" id="login-email" />
 
-    <label for="loging-password">Password</label>
-    <input type="password" name="login-password" id="login-password">
-  </form>
-</body>
-</html>
+  <label for="loging-password">Password</label>
+  <input type="password" name="login-password" id="login-password" />
+
+  <button type="submit">Submit</button>
+</form>
+
+<button hx-get="/api/clicked" hx-swap="outerHTML">HTMX test button</button>
+{{end}}
